--- a/Sources/Application/Areas/WpfUI/Views/MainView.xaml
+++ b/Sources/Application/Areas/WpfUI/Views/MainView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Mmu.LolTimer.Areas.WpfUI.MainView"
+﻿<Window x:Class="Mmu.LolTimer.Areas.WpfUI.Views.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,7 +10,7 @@
     <Window.Background>
         <SolidColorBrush Opacity="0" />
     </Window.Background>
-    <Grid>
+    <Grid x:Name="Grd">
         <Label FontSize="30" Foreground="DarkRed" x:Name="Lbl"></Label>
     </Grid>
 </Window>
