--- a/Sources/Application/Areas/WpfUI/MainView.xaml
+++ b/Sources/Application/Areas/WpfUI/MainView.xaml
@@ -1,17 +1,18 @@
-﻿<Window x:Class="Mmu.LolTimer.Areas.WpfUI.Views.MainView"
+﻿<Window x:Class="Mmu.LolTimer.Areas.WpfUI.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
+        SizeToContent="Width"
         AllowsTransparency="True"
         WindowStyle="None"
-        Top="0" Left="0">
+        Top="0" Left="0" Height="40">
     <!--<Window.Background>
         <SolidColorBrush Opacity="0" />
     </Window.Background>-->
     <Window.Resources>
-        <ResourceDictionary Source="/Mmu.LolTimer;component/Areas/WpfUI/Dictionaries/DataTemplates.xaml" />
+        <ResourceDictionary Source="/Mmu.LolTimer;component/Areas/WpfUI/MainViewDict.xaml" />
     </Window.Resources>
 
     <ItemsControl ItemsSource="{Binding JungleCamps, Mode=OneWay}" ItemTemplate="{StaticResource JungleCamp}">
